# biomass-iq

./: .gitignore  DEPLOY.md  docker-compose.yml  railway.json  render.yaml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  railway.json  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/adapters/csiro/: mapper.py  parser.py
backend/app/adapters/csiro/raw_data/2024-05-08_CSIRO_45807v69/data/: sample_data_geo.csv
backend/app/adapters/csiro/raw_data/2024-05-08_CSIRO_45807v69/metadata/: collection_import_sha256sum.txt  dublincore-000045807v069.xml
backend/app/adapters/phylis/: mapper.py  parser.py  scraper.py
backend/app/adapters/phylis/raw_data/: tree.json
backend/app/api/: compare.py  export.py  observations.py  search.py  sources.py  summary.py
backend/app/models/: __init__.py  measurement.py  property.py  sample.py  source_status.py  substance.py
backend/app/services/: aggregation.py  email_alerts.py  export.py  normalization.py  observations.py  scheduler.py  search.py  source_check.py  substance_dedupe.py
backend/scripts/: ingest_phylis.py  init_db.py  init_schema.py  start.py
frontend/: package-lock.json  package.json
frontend/.claude/: launch.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/components/ui/: HelpModal.tsx  (+7 more)
frontend/src/lib/: api.ts  basket.ts  chartColors.ts  exclusions.ts  formatters.ts  mergeSummaries.ts  propertyAggregation.ts  types.ts  unitConversion.ts  userData.ts  userSearch.ts
(+20 files in other folders)
